# Quantum_Compiler

./: QPR2.XQIASM  README.md  XQI-QC-Density-Matrix-list.txt  XQI-QC-list.txt  ascii_art.db  calculation_funs.py  config.py  evaluator.py  lexer.py  main.py  parser.py  pyproject.toml  register.py  requirements.txt  setup.py  textprocessing_funs.py
tests/: test.XQIASM  test_cnot.py  test_evaluator.py
xqi/: README.md  config.py  evaluator.py  main.py  parser.py  word_completer.py  xqi_lexer.py
xqi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
xqi_shell/: __init__.py  auto_suggest.py  style.py
xqishell/: README.md  __init__.py  auto_suggest.py  custom_lexer.py  evaluator.py  main.py  parser.py  textprocessing_funs.py
