[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xqi"
version = "0.1.0"
description = "Quantum Computing Compiler and Simulator"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11"
dependencies = [
    "markdown-it-py>=3.0,<4.0",
    "mdurl>=0.1,<1.0",
    "numpy>=2.1,<3.0",
    "prompt_toolkit>=3.0,<4.0",
    "pyvim>=3.0,<4.0",
    "Pygments>=2.18,<3.0",
    "scipy>=1.14,<2.0",
    "wcwidth>=0.2,<1.0",
    "pyperclip==1.11.0"
]


[project.scripts]
xqishell = "xqi.main:main"
