[build-system]
requires = ["hatchling"]          # ← 改成这个
build-backend = "hatchling.build" # ← 改成这个

[project]
name = "xqi"
version = "0.1.0"
description = "Quantum Computing Compiler and Simulator"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [{ name = "kerpers34-a11y", email = "kerpers34@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "markdown-it-py>=3.0,<4.0",
    "mdurl>=0.1,<1.0",
    "numpy>=2.1,<3.0",
    "prompt_toolkit>=3.0,<4.0",
    "pyvim>=3.0,<4.0",
    "Pygments>=2.18,<3.0",
    "scipy>=1.14,<2.0",
    "wcwidth>=0.2,<1.0",
    "pyperclip==1.11.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
Homepage = "https://github.com/kerpers34-a11y/Quantum_Compiler"
Repository = "https://github.com/kerpers34-a11y/Quantum_Compiler"
"Bug Tracker" = "https://github.com/kerpers34-a11y/Quantum_Compiler/issues"
[project.scripts]
xqishell = "xqi.main:main"
